2007-01-04  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules: Fix the situation where "cowbuilder --update
	--override-config --mirror $mirror" fails to clean up.

2006-12-17  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-createbuildenv: use FORCE_CONFNEW in 'pbuilder create'
	also, since dist-upgrade here may cause configuration file change
	if enough change exists. e.g.  when OTHERMIRROR is set to
	backports.org

	* pbuilder: remove '/run' after 'execute'

2006-12-09  Loic Minier <lool@dooz.org>

	* pbuilder-satisfydepends-experimental: small optimization: move
	COMPARESTRING and DEPSVERSION computation out of the per-version loop;
	quote COMPARESTRING properly.
	* pbuilder-satisfydepends-experimental: small optimization: return the
	exact requested version when a strictly versionned dependency is used.

2006-11-14  Loic Minier <lool@dooz.org>

	* testsuite/regression/run-test-satisfy-depends.sh: log error
	messages with E:, not I:.

2006-11-13  Loic Minier <lool@dooz.org>

	* Documentation/pbuilder-doc.xml: describe workaround of using
	backports.org to use cowdancer for sarge; fixes #394710.

2006-11-06  Loic Minier <lool@dooz.org>

	* debuild-pbuilder, pbuilder-buildpackage-funcs, pdebuild-internal:
	use $PBUILDERSATISFYDEPENDSCMD instead of
	/usr/lib/pbuilder/pbuilder-satisfydepends.
	* pbuilderrc: set PBUILDERSATISFYDEPENDSCMD to
	/usr/lib/pbuilder/pbuilder-satisfydepends by default.
	* pbuilderrc.5: document PBUILDERSATISFYDEPENDSCMD.
	* debian/TODO: alternatives implementation of pbuilder-satisfydepends
	now possible.
	* pdebuild-checkparams, pdebuild-uml-checkparams, pdebuild-internal:
	add a new --pbuildersatisfydepends flag to override
	PBUILDERSATISFYDEPENDSCMD
	* pdebuild: pass --pbuildersatisfydepends to pdebuild-internal.
	* pbuilder-modules, pdebuild.1: document --pbuildersatisfydepends.
	* pbuilder-satisfydepends: drop an useless invocation of awk.
	* pbuilder-satisfydepends-experimental, Makefile: alternate