@@ -3,8 +3,9 @@ pbuilder (0.163) UNRELEASED; urgency=low
   [ Junichi Uekawa ]
   * --override-config and --mirror without --distribution leaves /proc
     mounted, and breaks cowbuilder. (closes: #405497)
+  * pbuilder repository moved over to git!
 
- -- Junichi Uekawa <dancer@debian.org>  Thu,  4 Jan 2007 15:20:20 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sat, 13 Jan 2007 23:13:30 +0900
 
 pbuilder (0.162) unstable; urgency=low
 
