@@ -1,3 +1,10 @@
+2007-01-13  Junichi Uekawa  <dancer@debian.org>
+
+	* git-tag.sh: 
+	* debuild.sh: tools for git repository package building.
+
+	* Documentation/pbuilder-doc.xml: Add references to git repository.
+
 2007-01-04  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuilder-modules: Fix the situation where "cowbuilder --update
